-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 26, repo-valhalla
-
Component/s: hotspot
-
b07
-
aarch64
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8376275 | 26.0.2 | Xiaohong Gong | P3 | Resolved | Fixed | master |
Test: compiler/vectorapi/VectorMaskToLongTest.java
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/da1065b5-7b94-4f0d-85e9-a3a252b9a32e-S47264/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6479444e-e5ff-4230-b90d-8ed3f0effde3/runs/6058f35c-a2be-4210-b796-b06a90e97a67/workspace/open/src/hotspot/share/opto/type.hpp:2287), pid=69056, tid=28419
# assert(_base >= VectorMask && _base <= VectorZ) failed: Not a Vector
#
# JRE version: Java(TM) SE Runtime Environment (27.0) (fastdebug build 27-internal-2025-12-17-0421195.david.holmes.jdk-dev3.git)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 27-internal-2025-12-17-0421195.david.holmes.jdk-dev3.git, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
# Core dump will be written. Default location: core.69056
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Djava.library.path=/System/Volumes/Data/mesos/work_dir/jib-master/install/2025-12-17-0421195.david.holmes.jdk-dev3.git/macosx-aarch64-debug.test/hotspot/jtreg/native -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:MaxRAMPercentage=6.25 -Dtest.boot.jdk=/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk/25/37/bundles/macos-aarch64/jdk-25_macos-aarch64_bin.tar.gz/jdk-25.jdk/Contents/Home -Djava.io.tmpdir=/System/Volumes/Data/mesos/work_dir/slaves/da1065b5-7b94-4f0d-85e9-a3a252b9a32e-S43526/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/83eb53ee-1fb8-4650-877b-76d8093521e5/runs/57a4f483-6c21-40ca-8007-fa7abad2c523/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier3_compiler/tmp -XX:+UnlockDiagnosticVMOptions -XX:-TieredCompilation -XX:+StressArrayCopyMacroNode -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP -XX:+StressMacroExpansion -XX:+StressMethodHandleLinkerInlining -XX:+StressCompiledExceptionHandlers -XX:VerifyConstraintCasts=1 -XX:+StressLoopPeeling -Dir.framework.server.port=64349 --add-modules=jdk.incubator.vector -XX:-BackgroundCompilation -XX:CompileCommand=quiet -DWarmup=10000 compiler.lib.ir_framework.test.TestVM compiler.vectorapi.VectorMaskToLongTest
Host: jpg-mac-arm-703-vm-01.java.oraclecorp.com, "VirtualMac2,1" arm64, 8 cores, 14G, Darwin 24.6.0, macOS 15.7.2 (24G325)
Time: Thu Dec 18 14:49:28 2025 GMT elapsed time: 1.345245 seconds (0d 0h 0m 1s)
--------------- T H R E A D ---------------
Current thread (0x0000000160835610): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=28419, stack(0x000000016cfd0000,0x000000016d1d3000) (2060K)]
Current CompileTask:
C2:1345 442 b compiler.vectorapi.VectorMaskToLongTest::testMaskAllToLongShort (7 bytes)
Stack: [0x000000016cfd0000,0x000000016d1d3000], sp=0x000000016d1cede0, free space=2043k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x1277800] VMError::report(outputStream*, bool)+0x1b70 (type.hpp:2287)
V [libjvm.dylib+0x127b104] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void const*, void const*, char const*, int, unsigned long)+0x55c
V [libjvm.dylib+0x5e50ec] print_error_for_unit_test(char const*, char const*, char*)+0x0
V [libjvm.dylib+0x124e18c] VectorMaskToLongNode::Ideal_MaskAll(PhaseGVN*)+0x1f4
V [libjvm.dylib+0x124e1cc] VectorMaskToLongNode::Ideal(PhaseGVN*, bool)+0x20
V [libjvm.dylib+0xf62430] PhaseIterGVN::transform_old(Node*)+0x164
V [libjvm.dylib+0xf61180] PhaseIterGVN::optimize()+0x2c4
V [libjvm.dylib+0x53c88c] Compile::inline_incrementally_cleanup(PhaseIterGVN&)+0x180
V [libjvm.dylib+0x53d1cc] Compile::inline_incrementally(PhaseIterGVN&)+0x23c
V [libjvm.dylib+0x53535c] Compile::Optimize()+0x2f4
V [libjvm.dylib+0x533c4c] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1578
V [libjvm.dylib+0x3f0a44] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x208
V [libjvm.dylib+0x555710] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x98c
V [libjvm.dylib+0x554a10] CompileBroker::compiler_thread_loop()+0x3cc
V [libjvm.dylib+0x94f984] JavaThread::thread_main_inner()+0x1f8
V [libjvm.dylib+0x11b6eb0] Thread::call_run()+0xf0
V [libjvm.dylib+0xf07c38] thread_native_entry(Thread*)+0x138
C [libsystem_pthread.dylib+0x6bc8] _pthread_start+0x88
Lock stack of current Java thread (top to bottom):
Flags:
-J-Dtest.java.opts='-XX:+UnlockDiagnosticVMOptions -XX:-TieredCompilation -XX:+StressArrayCopyMacroNode -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP -XX:+StressMacroExpansion -XX:+StressMethodHandleLinkerInlining -XX:+StressCompiledExceptionHandlers -XX:VerifyConstraintCasts=1 -XX:+StressLoopPeeling' \\
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/da1065b5-7b94-4f0d-85e9-a3a252b9a32e-S47264/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6479444e-e5ff-4230-b90d-8ed3f0effde3/runs/6058f35c-a2be-4210-b796-b06a90e97a67/workspace/open/src/hotspot/share/opto/type.hpp:2287), pid=69056, tid=28419
# assert(_base >= VectorMask && _base <= VectorZ) failed: Not a Vector
#
# JRE version: Java(TM) SE Runtime Environment (27.0) (fastdebug build 27-internal-2025-12-17-0421195.david.holmes.jdk-dev3.git)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 27-internal-2025-12-17-0421195.david.holmes.jdk-dev3.git, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
# Core dump will be written. Default location: core.69056
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Djava.library.path=/System/Volumes/Data/mesos/work_dir/jib-master/install/2025-12-17-0421195.david.holmes.jdk-dev3.git/macosx-aarch64-debug.test/hotspot/jtreg/native -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:MaxRAMPercentage=6.25 -Dtest.boot.jdk=/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk/25/37/bundles/macos-aarch64/jdk-25_macos-aarch64_bin.tar.gz/jdk-25.jdk/Contents/Home -Djava.io.tmpdir=/System/Volumes/Data/mesos/work_dir/slaves/da1065b5-7b94-4f0d-85e9-a3a252b9a32e-S43526/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/83eb53ee-1fb8-4650-877b-76d8093521e5/runs/57a4f483-6c21-40ca-8007-fa7abad2c523/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier3_compiler/tmp -XX:+UnlockDiagnosticVMOptions -XX:-TieredCompilation -XX:+StressArrayCopyMacroNode -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP -XX:+StressMacroExpansion -XX:+StressMethodHandleLinkerInlining -XX:+StressCompiledExceptionHandlers -XX:VerifyConstraintCasts=1 -XX:+StressLoopPeeling -Dir.framework.server.port=64349 --add-modules=jdk.incubator.vector -XX:-BackgroundCompilation -XX:CompileCommand=quiet -DWarmup=10000 compiler.lib.ir_framework.test.TestVM compiler.vectorapi.VectorMaskToLongTest
Host: jpg-mac-arm-703-vm-01.java.oraclecorp.com, "VirtualMac2,1" arm64, 8 cores, 14G, Darwin 24.6.0, macOS 15.7.2 (24G325)
Time: Thu Dec 18 14:49:28 2025 GMT elapsed time: 1.345245 seconds (0d 0h 0m 1s)
--------------- T H R E A D ---------------
Current thread (0x0000000160835610): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=28419, stack(0x000000016cfd0000,0x000000016d1d3000) (2060K)]
Current CompileTask:
C2:1345 442 b compiler.vectorapi.VectorMaskToLongTest::testMaskAllToLongShort (7 bytes)
Stack: [0x000000016cfd0000,0x000000016d1d3000], sp=0x000000016d1cede0, free space=2043k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x1277800] VMError::report(outputStream*, bool)+0x1b70 (type.hpp:2287)
V [libjvm.dylib+0x127b104] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void const*, void const*, char const*, int, unsigned long)+0x55c
V [libjvm.dylib+0x5e50ec] print_error_for_unit_test(char const*, char const*, char*)+0x0
V [libjvm.dylib+0x124e18c] VectorMaskToLongNode::Ideal_MaskAll(PhaseGVN*)+0x1f4
V [libjvm.dylib+0x124e1cc] VectorMaskToLongNode::Ideal(PhaseGVN*, bool)+0x20
V [libjvm.dylib+0xf62430] PhaseIterGVN::transform_old(Node*)+0x164
V [libjvm.dylib+0xf61180] PhaseIterGVN::optimize()+0x2c4
V [libjvm.dylib+0x53c88c] Compile::inline_incrementally_cleanup(PhaseIterGVN&)+0x180
V [libjvm.dylib+0x53d1cc] Compile::inline_incrementally(PhaseIterGVN&)+0x23c
V [libjvm.dylib+0x53535c] Compile::Optimize()+0x2f4
V [libjvm.dylib+0x533c4c] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1578
V [libjvm.dylib+0x3f0a44] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x208
V [libjvm.dylib+0x555710] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x98c
V [libjvm.dylib+0x554a10] CompileBroker::compiler_thread_loop()+0x3cc
V [libjvm.dylib+0x94f984] JavaThread::thread_main_inner()+0x1f8
V [libjvm.dylib+0x11b6eb0] Thread::call_run()+0xf0
V [libjvm.dylib+0xf07c38] thread_native_entry(Thread*)+0x138
C [libsystem_pthread.dylib+0x6bc8] _pthread_start+0x88
Lock stack of current Java thread (top to bottom):
Flags:
-J-Dtest.java.opts='-XX:+UnlockDiagnosticVMOptions -XX:-TieredCompilation -XX:+StressArrayCopyMacroNode -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP -XX:+StressMacroExpansion -XX:+StressMethodHandleLinkerInlining -XX:+StressCompiledExceptionHandlers -XX:VerifyConstraintCasts=1 -XX:+StressLoopPeeling' \\
- backported by
-
JDK-8376275 C2: assert(_base >= VectorMask && _base <= VectorZ) failed: Not a Vector
-
- Resolved
-
- relates to
-
JDK-8367292 VectorAPI: Optimize VectorMask.fromLong/toLong() for SVE
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk26u/d1d27deb
-
Commit(master)
openjdk/jdk/38b66b12
-
Review(jdk26)
openjdk/jdk/29404
-
Review(master)
openjdk/jdk26u/27
-
Review(master)
openjdk/jdk/29057
(2 links to)