8374043: C2: assert(_base >= VectorMask && _base <= VectorZ) failed: Not a Vector